syntax = "proto3";
package telemetry_ingestion_proto;

service TelemetryIngestion {
    rpc insert_process (InsertProcessRequest) returns (InsertReply);
}

message InsertProcessRequest {
    string id = 1;
    string exe = 2;
    string username = 3;
    string computer = 4;
    int64  tsc_frequency = 5;
}

message InsertReply {
    string msg = 1;
}
