syntax = "proto3";
import "process.proto";
import "stream.proto";
import "block.proto";

package telemetry;

service TelemetryIngestion {
  rpc insert_process(Process) returns (InsertReply);
  rpc insert_stream(Stream) returns (InsertReply);
  rpc insert_block(Block) returns (InsertReply);
}

message InsertReply { string msg = 1; }
